MGRENTITLE-62 Fix sonarcloud code smells